<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".internPage">

    <TextView
        android:id="@+id/custdetails"
        android:layout_width="242dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/customer_details"

        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@id/scroll"
        android:layout_width="match_parent"
        android:layout_height="491dp"
        android:layout_below="@+id/custdetails"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rect">

            <TextView
                android:id="@id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/user"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@id/fname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:hint="@string/firstname"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:hint="@string/lastname"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text" />


            <TextView
                android:id="@id/LocTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/location"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:hint="@string/state"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text" />

            <EditText
                android:id="@id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:hint="@string/city"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rect_address"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"/>


            <TextView
                android:id="@id/ConTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/contact"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:ems="10"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@id/OrderTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/cart"
                android:text="@string/order_details"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:ems="10"
                android:hint="@string/copy_count"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/bill"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:ems="10"
                android:hint="@string/total_bill"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/soldby"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:hint="@string/sold_by"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/date"
                android:drawableEnd="@drawable/arrow_down"
                android:background="@drawable/rounded_white"
                android:drawablePadding="5dp"
                android:inputType="date" />


            <Button
                android:id="@id/submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:background="@drawable/rounded_btn"/>

            <Button
                android:id="@+id/adminPage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/adminpage"
                android:layout_gravity="center"
                android:background="@drawable/rounded_btn"/>

            <Button
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/signout"
                android:layout_gravity="center"
                android:background="@drawable/rounded_btn"/>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>