<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff59"
    tools:context=".about">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pic1"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/child2" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/pic1"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="@string/DESIRE"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/ABOUT"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutinfo"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="19sp"
                android:gravity="center"
                android:text="@string/About"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adhayaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutinfo"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:text="@string/ADHAYAAN"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adhayaaninfo"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/adhayaan"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/adhayaan"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/IMPACT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adhayaaninfo"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:text="@string/IMPACT"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/INPACTINFO"
                android:layout_width="349sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/IMPACT"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:text="@string/impact"
                android:textColor="@color/Black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>