<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".register">

    <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="225sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background"
            android:contentDescription="@string/todo" />

    <LinearLayout

        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/linear"
        android:orientation="vertical"
        android:paddingStart="25sp"
        android:paddingTop="50sp"
        android:paddingEnd="25sp"
        android:paddingBottom="20sp">

        <EditText
            android:id="@+id/email"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#201e21"
            android:textColorHint="#201e21"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#201e21"
            android:textColorHint="#201e21"
            android:textSize="20sp" />


    </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="200sp"
            android:layout_height="45sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="105dp"
            android:background="@drawable/edittextstyle"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="20sp"
            />

</RelativeLayout>