<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".login">

    <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="172dp"
            android:background="@drawable/linear"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp"
            android:paddingBottom="40dp">

            <EditText
                android:id="@+id/editText_changePasscode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/passcode"
                android:inputType="numberPassword"
                android:textColor="#201e21"
                android:textColorHint="@color/transparent_black_hex_8"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/changePasscode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:height="20dp"
            android:background="@drawable/edittextstyle"
            android:text="@string/SubmitPasscode"
            android:textColor="#ffffff"
            android:textSize="20sp" />

</RelativeLayout>